Adding new section Full-width-slide

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -203,6 +203,8 @@
     html body .two-column-heading,
     html body .hero-title,
     html body .hero-glow-title,
+    html body .full-width-slider-title,
+    html body .slide-title,
     html body .page-title,
     html body .section-title,
     html body .custom-text-heading,
@@ -236,6 +238,8 @@
     html body .two-column-subheading,
     html body .hero-subtitle,
     html body .hero-glow-subtitle,
+    html body .full-width-slider-subtitle,
+    html body .slide-subtitle,
     html body .page-subtitle,
     html body main .custom-text-subheading,
     html body main .two-column-subheading,
